# libinsane

./: .gitignore  CMakeLists.txt  Makefile  README.markdown  splint.rc
cmake/: GLib.cmake  GtkDoc.cmake  Mingw.cmake  Sane.cmake
doc/: Makefile  doxygen.conf  index.html
doc/doxygen/: api_multiplexer.dox  behavior_normalizations.dox  dev_rules.dox  gobject_introspection_api.dox  index.dox  introduction.dox  logging.dox  normalized_api.dox  quickstart.dox  safebet.dox  scan_apis.dox  workarounds.dox
doc/source/: api_multiplexer.rst  behavior_normalizations.rst  conf.py  dev_rules.rst  gobject_introspection_api.rst  index.rst  introduction.rst  normalized_api.rst  quickstart.rst  scan_apis.rst  scanner_apis.rst  workarounds.rst
doc/source/design/: introduction.rst
include/libinsane/: capi.h  error.h  multiplexer.h  normalizers.h  sane.h  twain.h  util.h  wia_automation.h  wia_ll.h  workarounds.h
include/libinsane-gobject/: libinsane.h
libinsane/: CMakeLists.txt  Makefile.am  configure.ac
libinsane-gobject/: CMakeLists.txt  Makefile.am  configure.ac
libinsane-gobject/cmake/: FindGLib.cmake
libinsane-gobject/doc/: gtkdocentities.ent  libinsane_gobject-gtkdoc.xml
libinsane-gobject/examples/: list_devices.py  list_options.py  scan.py
libinsane-gobject/include/libinsane-gobject/: capability.h  constraint.h  constraint_type.h  device_descriptor.h  device_descriptor_private.h  error.h  error_private.h  img_format.h  item.h  item_private.h  item_type.h  libinsane-api.h  log.h  option_descriptor.h  option_descriptor_private.h  scan_parameters.h  scan_parameters_private.h  scan_session.h  scan_session_private.h  unit.h  value_type.h
libinsane-gobject/src/: constraint.c  device_descriptor.c  enums.c.template  enums.h.template  error.c  item.c  libinsane-api.c  libinsane.c  log.c  option_descriptor.c  scan_parameters.c  scan_session.c
libinsane/include/libinsane/: capi.h  dumb.h  error.h  log.h  multiplexer.h  normalizers.h  safebet.h  sane.h  str2impls.h  twain.h  util.h  wia_automation.h  wia_ll.h  workarounds.h
libinsane/src/: dumb.c  error.c  log.c  multiplexer.c  safebet.c  str2impls.c  twain.c  wia_automation.c
libinsane/src/bases/: dumb.c  sane.c  twain.c  wia_ll.c
libinsane/src/normalizers/: all_opts_on_all_sources.c  end_of_feed.c  flatbed_and_feeder_behavior.c  min_one_source.c  raw.c  raw24.c  resolution_constraint_format.c  resolution_format.c  scan_area_opts.c  source_names.c  source_nodes.c  source_types.c  sources_order.c  strip_non_scanners.c
libinsane/src/workarounds/: clean_dev_model_char.c  clean_dev_model_from_manufacturer.c  dedicated_thread.c  no_read_on_inactive_opt.c  no_write_on_readonly_opt.c  opt_doc_source.c  opt_mode.c  opt_scan_resolution.c  opts_page_size.c  strip_translations.c
libinsane/tests/: main.c  tests_multiplexer.c  tests_sane.c  util.h
src/: sane.c
src/libinsane/: wia_ll.c
subprojects/libinsane-gobject/examples/: scan.py
subprojects/libinsane/examples/: lis_scan.c
